--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "sass --watch ./assets/scss:./assets/css --style compressed --no-source-map"
   },
   "repository": {
     "type": "git",
