--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "sass --watch ./assets/scss:./assets/css --style compressed --no-source-map"
+    "dev": "sass --watch ./assets/scss:./assets/css --style compressed --no-source-map",
+    "git": "git add . && git commit -m 'deploy' && git push origin master && echo 'deploy' "
   },
   "repository": {
     "type": "git",
