--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "sass --watch ./assets/scss:./assets/css --style compressed --no-source-map",
-    "git": "git add . && git commit -m 'deploy' && git push origin master && echo 'deploy' "
+    "git": "git add . && git commit -m 'deploy' && git push origin master && echo \"deploy concluido\" "
   },
   "repository": {
     "type": "git",
