--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "sass --watch ./assets/scss:./assets/css --style compressed --no-source-map",
-    "git": "git add . && git commit -m 'deploy' && git push origin master && echo \"deploy concluido\" "
+    "dev": "sass --watch ./assets/scss:./assets/css --style compressed --no-source-map"
   },
   "repository": {
     "type": "git",
